--- a/FAQ.html
+++ b/FAQ.html
@@ -2,6 +2,7 @@
 
 <center>
 <header>
+<link rel="stylesheet" type="text/css" href="gameindex.css">
 <h2> <head>Frequently Asked Questions</head> </h2>
 </header>
 
