--- a/FAQ.html
+++ b/FAQ.html
@@ -10,7 +10,7 @@
 <h3>The games aren't working for me!</h3>
 <h4>Fear no more! Here's what you do - update your Java to any version of Java <i>before update 51</i>, <br>and then go into its settings from Control Panel. Go to Security, and find <br>the Exceptions area. Copy the following text into it:
 <br><i>https://googledrive.com/host/0Bz8-35aP9AmXZ1BoUlVWaTB6dTQ/</i>
-<br>Add it as an exception, set security settings to <i>Medium</i>and try again.</h4>
+<br>Add it as an exception, set security settings to <i>Medium</i>, and try again.</h4>
 <br>
 <h3>When is the next game coming out?</h3>
 <h4>Well, here at Oak Laboratories, it takes us some time to make a quality game.
